--- a/springboot-crud-rest-app/src/main/resources/public/index.html
+++ b/springboot-crud-rest-app/src/main/resources/public/index.html
@@ -93,13 +93,13 @@
             <a class = "navbar-brand" href = "#">
                <img src = "img/sse.png" 
                   style="width: 73px;height: 28px;" alt = "">
-            </a>
+            </a><i class="fa fa-bars fa-2x menu-toggle" aria-hidden="true" style="color: #004587;"></i>
             <ul class = "navbar-nav ml-auto">
               
                 <li class="nav-item dropdown">
 		        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown"
 		          aria-haspopup="true" aria-expanded="false" style="color: #00a8ff;">
-		          <i class="fa fa-user-circle"></i> Profile </a>
+		          <i class="fa fa-user-circle fa-2x"></i><span> Profile </span></a>
 		        <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
 		          <a class="dropdown-item" href="#">My account</a>
 		          <a class="dropdown-item" href="#">Log out</a>
@@ -115,21 +115,21 @@
       <!-- Sidebar -->
       <div id="sidebar-wrapperMain" >
       <ul id="sidebar_menu" class="sidebar-nav">
-          <li class="sidebar-brand" ><a class="" href="#" id="home" ng-click="redirectUrl($event)">Dashboard</a><i class="fa fa-bars sub_icon menu-toggle" aria-hidden="true" style="position: absolute;left: 65%;"></i></li>
+          <li class="sidebar-brand" ><a class="" href="#" id="home" ng-click="redirectUrl($event)"><i class="fa fa-dashboard subicon"  aria-hidden="true" style="color: #ac6bec;"></i>Dashboard</a></li>
       </ul>
       <ul  class="sidebar-nav">  
-	<li class="sidebar-brand" id="customer_master" ng-click="redirectUrl($event)"><a>Customer<i class="fa fa-user sub_icon" aria-hidden="true"></i></a></li>
-	<li class="sidebar-brand" id="vendor_master"  ng-click="redirectUrl($event)"><a>Vendor<i class="fa fa-user-circle sub_icon"></i></a></li> 
-	<li class="sidebar-brand" id="employee_master" ng-click="redirectUrl($event)" ><a>Employee<i class="fa fa-users sub_icon" aria-hidden="true"></i></a></li> 
+	<li class="sidebar-brand" id="customer_master" ng-click="redirectUrl($event)"><a><i class="fa fa-user subicon" aria-hidden="true" style="color: #ac6bec;"></i>Customer</a></li>
+	<li class="sidebar-brand" id="vendor_master"  ng-click="redirectUrl($event)"><a><i class="fa fa-user-circle subicon"  style="color: #1b99cf;"></i>Vendor</a></li> 
+	<li class="sidebar-brand" id="employee_master" ng-click="redirectUrl($event)" ><a><i class="fa fa-users subicon" aria-hidden="true"  style="color: #f29824;"></i>Employee</a></li> 
 	<!-- <li class='sidebar-brand' ><a id="product_master"  ng-click="redirectUrl($event)">Product<i class="fa fa-product-hunt sub_icon" aria-hidden="true"></i></a></li> --> 
-	<li class="sidebar-brand" id="vehicle_master" ng-click="redirectUrl($event)"><a>TripSheet<i class="fa fa-truck sub_icon" aria-hidden="true"></i></a></li>
-	<li class="sidebar-brand" id="user_master" ng-click="redirectUrl($event)"><a>User<i class="fa fa-user sub_icon" aria-hidden="true"></i></a></li>
-	<li class="sidebar-brand" id="userAccess_master" ng-click="redirectUrl($event)"><a>Access<i class="fa fa-check-square-o sub_icon" aria-hidden="true"></i></a></li>
-	<li class="sidebar-brand" id="billing_master" ng-click="redirectUrl($event)"><a>Billing<i class="fa fa-money sub_icon" aria-hidden="true"></i></a></li>
-	<li class="sidebar-brand" id="receipt_master" ng-click="redirectUrl($event)"><a>Receipt<i class="fa fa-address-book sub_icon" aria-hidden="true"></i></a></li>
-	<li class="sidebar-brand" id="voucher_master" ng-click="redirectUrl($event)"><a>Voucher<i class="fa fa-address-book sub_icon" aria-hidden="true"></i></a></li>
-	<li class="sidebar-brand" id="ledger_master" ng-click="redirectUrl($event)"><a>Ledger<i class="fa fa-address-book sub_icon" aria-hidden="true"></i></a></li>
- 	<li class="sidebar-brand" id="logout" ng-click="redirectUrl($event)"><a>Logout<i class="fa fa-sign-out sub_icon" aria-hidden="true"></i></a></li>
+	<li class="sidebar-brand" id="vehicle_master" ng-click="redirectUrl($event)"><a><i class="fa fa-truck subicon" aria-hidden="true"  style="color: #46c35f;"></i>TripSheet</a></li>
+	<li class="sidebar-brand" id="user_master" ng-click="redirectUrl($event)"><a><i class="fa fa-user subicon" aria-hidden="true"  style="color: #fa424a;"></i>User</a></li>
+	<li class="sidebar-brand" id="userAccess_master" ng-click="redirectUrl($event)"><a><i class="fa fa-check-square-o subicon" aria-hidden="true"  style="color: #cd6724;"></i>Access</a></li>
+	<li class="sidebar-brand" id="billing_master" ng-click="redirectUrl($event)"><a><i class="fa fa-money subicon" aria-hidden="true"  style="color: #21a788;"></i>Billing</a></li>
+	<li class="sidebar-brand" id="receipt_master" ng-click="redirectUrl($event)"><a><i class="fa fa-address-book subicon" aria-hidden="true"  style="color: #ff561c;"></i>Receipt</a></li>
+	<li class="sidebar-brand" id="voucher_master" ng-click="redirectUrl($event)"><a><i class="fa fa-address-book subicon" aria-hidden="true"  style="color: #46c35f;"></i>Voucher</a></li>
+	<li class="sidebar-brand" id="ledger_master" ng-click="redirectUrl($event)"><a><i class="fa fa-address-book subicon" aria-hidden="true"  style="color: #b348ae;"></i>Ledger</a></li>
+ 	<li class="sidebar-brand" id="logout" ng-click="redirectUrl($event)"><a><i class="fa fa-sign-out subicon" aria-hidden="true"  style="color: #f29824;"></i>Logout</a></li>
       </ul>
         
       </div>
