pongal code changes

--- a/springboot-crud-rest-app/src/main/resources/public/LoginPage.html
+++ b/springboot-crud-rest-app/src/main/resources/public/LoginPage.html
@@ -74,6 +74,7 @@
 <div class="logincontainer">
 
 <div class="wrapper" style="margin-top: -20px;">
+	<div class="imgDiv"><img class="truck" src = "img/animated-truck.gif" alt = ""></div>
 				<div class="login selectedComp" style="margin-left: auto;margin-right: auto;">
 						<div>
 							<input type="text" placeholder="Enter Username" name="username" ng-model="user.username" id="username" style="" autocomplete="off">
@@ -94,9 +95,9 @@
 						<div id="Errors" style="color: red;" class="errorMessage">
 						</div> -->
             <div style="padding-top: 5px;" class="">
-							<div id="orDiv" style="width:40%;border-bottom: 1px solid #000;line-height:0.1em;margin:10px 0 20px;float:left;"></div>
+							<div id="orDiv" style="width:40%;border-bottom:1px solid #75758a;line-height:0.1em;margin:10px 0 20px;float:left;"></div>
 							<div id="orDiv" style="width:20%;text-align:center;line-height:0.1em;margin:10px 0 20px;display:inline-block;color: #000;">OR</div>
-							<div id="orDiv" style="width:40%;border-bottom: 1px solid #000;line-height:0.1em;margin:10px 0 20px;float:right;"></div>
+							<div id="orDiv" style="width:40%;border-bottom: 1px solid #75758a;line-height:0.1em;margin:10px 0 20px;float:right;"></div>
 						</div>
 						<div><button id="newUserAdd" title="Register Here" type="button" class="newuseradd" style="width: 200px;height: 25px;cursor: not-allowed;">New User? Register Here</button></div>
 <div style="padding-top: 20px;font-size: 12px;font-weight: bold;margin-left: 70px;" class="selectedComp">
